Small change to proxy configuration

--- a/httpd.conf
+++ b/httpd.conf
@@ -502,13 +502,14 @@ SSLRandomSeed connect builtin
 
 # Set up a proxy for / to tomcat:8080
 <VirtualHost *:80>
+  ProxyRequests Off
+  ProxyPreserveHost on
   <Proxy *>
     Order Allow,Deny
     Allow from all
   </Proxy>
   ProxyPass / http://tomcat:8080/ retry=0
   ProxyPassReverse / http://tomcat:8080/
-  ProxyPreserveHost on
 
-  #ErrorLog /var/log/httpd/elasticbeanstalk-error_log
+  #ErrorLog /var/log/httpd/error_log
 </VirtualHost>
