--- a/httpd.conf
+++ b/httpd.conf
@@ -502,6 +502,7 @@ SSLRandomSeed connect builtin
 
 # Set up a proxy for / to tomcat:8080
 <VirtualHost *:80>
+  RequestHeader set X-Forwarded-Proto "http"
   ProxyRequests Off
   ProxyPreserveHost on
   <Proxy *>
