Try setting the X-Forwarded-Port

--- a/httpd.conf
+++ b/httpd.conf
@@ -502,7 +502,7 @@ SSLRandomSeed connect builtin
 
 # Set up a proxy for / to tomcat:8080
 <VirtualHost *:80>
-  RequestHeader set X-Forwarded-Proto "http"
+  RequestHeader set X-Forwarded-Port 80
   ProxyRequests Off
   ProxyPreserveHost on
   <Proxy *>
