--- a/httpd.conf
+++ b/httpd.conf
@@ -18,9 +18,6 @@ MaxRequestsPerChild 1000000
 
 Listen 80
 
-User apache
-Group apache
-
 CustomLog logs/access_log "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\""
 TraceEnable off
 
@@ -41,12 +38,12 @@ LoadModule rewrite_module modules/mod_rewrite.so
 
 
 # From elasticbeanstalk_log.conf
-LogFormat "%h (%{X-Forwarded-For}i) %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" eb_access_log_format
-CustomLog /var/log/httpd/elasticbeanstalk-access_log eb_access_log_format
+LogFormat "%h (%{X-Forwarded-For}i) %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" access_log_format
+CustomLog /var/log/httpd/access_log access_log_format
 
 # From healthd.conf
 LogFormat "%{%s}t\"%U\"%s\"%D\"%D\"%{X-Forwarded-For}i" healthd
-CustomLog "|/usr/sbin/rotatelogs /var/log/httpd/healthd/application.log.%Y-%m-%d-%H 3600" healthd
+CustomLog "|/usr/sbin/rotatelogs /var/log/httpd/healthd-application.log.%Y-%m-%d-%H 3600" healthd
 
 # 00_application.conf
 <VirtualHost *:80>
