Don't reference rotatelogs in the apache config

--- a/httpd.conf
+++ b/httpd.conf
@@ -549,7 +549,7 @@ CustomLog /var/log/httpd/access_log access_log_format
 
 # From healthd.conf
 LogFormat "%{%s}t\"%U\"%s\"%D\"%D\"%{X-Forwarded-For}i" healthd
-CustomLog "|/usr/sbin/rotatelogs /var/log/httpd/healthd-application.log.%Y-%m-%d-%H 3600" healthd
+CustomLog "/var/log/httpd/healthd-application.log.%Y-%m-%d-%H 3600" healthd
 
 AddOutputFilterByType DEFLATE text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript text/html text/plain
 
