Add custom log format

--- a/httpd.conf
+++ b/httpd.conf
@@ -544,8 +544,8 @@ SSLRandomSeed connect builtin
 
 
 ## From elasticbeanstalk_log.conf
-#LogFormat "%h (%{X-Forwarded-For}i) %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" access_log_format
-#CustomLog /var/log/httpd/access_log access_log_format
+LogFormat "%h (%{X-Forwarded-For}i) %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" access_log_format
+CustomLog /var/log/httpd/access_log access_log_format
 #
 ## From healthd.conf
 #LogFormat "%{%s}t\"%U\"%s\"%D\"%D\"%{X-Forwarded-For}i" healthd
