--- a/httpd.conf
+++ b/httpd.conf
@@ -40,25 +40,6 @@ ServerRoot "/usr/local/apache2"
 #
 # Mutex default:logs
 
-### New - Start
-#
-## Enable TCP keepclive
-#Timeout 60
-#KeepAlive On
-#MaxKeepAliveRequests 100
-#KeepAliveTimeout 60
-#
-#<IfModule worker.c>
-#StartServers        10
-#MinSpareThreads     250
-#MaxSpareThreads     250
-#ServerLimit         10
-#MaxClients          250
-#MaxRequestsPerChild 1000000
-#</IfModule>
-#
-### New - Old
-
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
 # ports, instead of the default. See also the <VirtualHost>
@@ -204,29 +185,6 @@ LoadModule dir_module modules/mod_dir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
 
-
-### New - Start
-#
-#CustomLog logs/access_log "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\""
-#TraceEnable off
-#
-#LoadModule alias_module modules/mod_alias.so
-#LoadModule authz_host_module modules/mod_authz_host.so
-#LoadModule log_config_module modules/mod_log_config.so
-#LoadModule deflate_module modules/mod_deflate.so
-#LoadModule headers_module modules/mod_headers.so
-#LoadModule proxy_module modules/mod_proxy.so
-#LoadModule proxy_balancer_module modules/mod_proxy_balancer.so
-#LoadModule proxy_ftp_module modules/mod_proxy_ftp.so
-#LoadModule proxy_http_module modules/mod_proxy_http.so
-#LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
-#LoadModule proxy_connect_module modules/mod_proxy_connect.so
-#LoadModule cache_module modules/mod_cache.so
-#LoadModule setenvif_module modules/mod_setenvif.so
-#LoadModule rewrite_module modules/mod_rewrite.so
-#
-### New - End
-
 <IfModule unixd_module>
 #
 # If you wish httpd to run as a different user or group, you must run
@@ -258,7 +216,7 @@ Group daemon
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin you@example.com
+#ServerAdmin you@example.com
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -344,7 +302,8 @@ LogLevel warn
     # define per-<VirtualHost> access logfiles, transactions will be
     # logged therein and *not* in this file.
     #
-    CustomLog /proc/self/fd/1 common
+    LogFormat "%h (%{X-Forwarded-For}i) %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" access_log_format
+    CustomLog /proc/self/fd/1 access_log_format
 
     #
     # If you prefer a logfile with access, agent, and referer information
@@ -543,16 +502,6 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 
-## From elasticbeanstalk_log.conf
-LogFormat "%h (%{X-Forwarded-For}i) %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" access_log_format
-CustomLog /var/log/httpd/access_log access_log_format
-#
-## From healthd.conf
-#LogFormat "%{%s}t\"%U\"%s\"%D\"%D\"%{X-Forwarded-For}i" healthd
-#CustomLog "/var/log/httpd/healthd-application.log.%Y-%m-%d-%H 3600" healthd
-#
-#AddOutputFilterByType DEFLATE text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript text/html text/plain
-
 # Set up a proxy for / to tomcat:8080
 <VirtualHost *:80>
   ProxyRequests Off
@@ -563,6 +512,4 @@ CustomLog /var/log/httpd/access_log access_log_format
   </Proxy>
   ProxyPass / http://tomcat:8080/ retry=0
   ProxyPassReverse / http://tomcat:8080/
-
-  ErrorLog /var/log/httpd/error_log
 </VirtualHost>
